Modificado: personagemFicha, inventarioJanelaP, InventarioPanelP, perriciasP, IniciativaP, CAP, jsonparser
Adicionado campo de bonus de iniciativa e classe de armadura adicional;
melhorias de otimização e remoção de bugs